# phone-cluster

./: PROTOCOL.md  README.md  pyproject.toml  requirements.in
client/: __init__.py  __main__.py
clusterctl/: __init__.py  __main__.py
config/: client.example.toml  server.example.toml
docs/: protocol.md
scripts/: create_client_config.py  test_toml.py
server/: __init__.py  __main__.py  app.py  db.py
