[project]
name = "phone-cluster"
version = "0.1.0"
description = "Lightweight server-client system for a phone-based cluster"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Ari Koneko" }
]

dependencies = [
  "flask>=3.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pip-tools>=7.4",
  "ruff>=0.6",
]

[project.urls]
Repository = ""
Issues = ""

# -------------------------
# Tooling configuration
# -------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]
ignore = ["E501"]